@@ -106,6 +106,7 @@ public class Defaults {
             monitorMap.addClass("gdb", GDBServer.class);
             monitorMap.addClass("simperf", SimPerfMonitor.class);
             monitorMap.addClass("serial", SerialMonitor.class);
+            monitorMap.addClass("spi", SPIMonitor.class);
             monitorMap.addClass("trip-time", TripTimeMonitor.class);
             monitorMap.addClass("ioregs", IORegMonitor.class);
             monitorMap.addClass("virgil", VirgilMonitor.class);
